@@ -73,16 +73,16 @@ public class Application implements CommandLineRunner {
                 .collect(Collectors.toList());
 
         // Use a Java 8 stream to print out each tuple of the list
-        splitUpNames.forEach(name -> log.info(String.format("Inserting customer record for %s %s", name[0], name[1])));
+        splitUpNames.forEach(name -> log.info("Inserting customer record for %s %s".formatted(name[0], name[1])));
 
         // Uses JdbcTemplate's batchUpdate operation to bulk load data
         jdbcTemplate.batchUpdate("INSERT INTO customers(first_name, last_name) VALUES (?,?)", splitUpNames);
 
         log.info("Querying for customer records where first_name = 'Josh':");
         jdbcTemplate.query(
-                "SELECT id, first_name, last_name FROM customers WHERE first_name = ?", new Object[]{"Josh"},
-                (rs, rowNum) -> new Customer(rs.getLong("id"), rs.getString("first_name"), rs.getString("last_name"))
-        ).forEach(customer -> log.info(customer.toString()));
+                "SELECT id, first_name, last_name FROM customers WHERE first_name = ?", (rs, rowNum) -> new Customer(rs.getLong("id"), rs.getString("first_name"), rs.getString("last_name"))
+        ,
+                new Object[]{"Josh"}).forEach(customer -> log.info(customer.toString()));
 
     }
 }
